--- a/.opensource/project.json
+++ b/.opensource/project.json
@@ -1,10 +1,71 @@
-{
-    "name": "Cloud Functions Samples",
-    "type": "sample",
-    "platforms": [
-        "Admin",
-        "Node"
-    ],
+delete
+end
+stop
+close no end void
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     "content": "README.md",
     "pages": {
         "quickstarts/big-ben/README.md": "Quickstart: HTTP Trigger + Hosting",
